<?xml version="1.0" encoding="utf-8"?>
<resources>

    <integer name="pin_sig_trans_time">2000</integer>
    <integer name="pin_sig_sync_delay">20</integer>

    <!-- UI Strings -->
    <string name="app_name">AbstractMachine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="test_string1">test</string>
    <string name="mem_tut_read_button">Read</string>
    <string name="mem_tut_write_button">Write</string>
    <string name="address_string">Address: </string>
    <string name="data_string">Data: </string>
    <string name="title_activity_von_neumann">VonNeumannActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="program_memory_title">Program Memory</string>
    <string name="data_memory_title">Data Memory</string>

    <string name="control_unit_state_label">Next Act:</string>
    <string name="program_counter_label">PC:</string>
    <string name="instruction_register_label">IR:</string>
    <string name="decoded_instruction_label">Ins:</string>
    <string name="control_unit_fetch_state">fetch</string>
    <string name="control_unit_execute_state">execute</string>
    <string name="control_unit_sleep_state">sleep</string>
    <string name="control_unit_halt_state">halt</string>
    <string name="control_unit_active_state">active</string>

    <string name="architecture_type_label">Architecture Type:</string>
    <string name="architecture_type_harvard">Harvard</string>
    <string name="architecture_type_von_neumann">Von Neumann</string>
    <string name="architecture_activity_system_label">System</string>
    <string name="architecture_activity_core_label">Core</string>

    <string name="compute_core_type_label">Compute Core Type:</string>
    <string name="compute_core_type_register">Register</string>
    <string name="compute_core_type_acc">Accumulator</string>
    <string name="compute_core_type_stack">Stack</string>

    <string name="data_width_label">Data Width:</string>
    <string name="instr_mem_size_label">Instruction Memory Size:</string>
    <string name="data_mem_size_label">Data Memory Size:</string>
    <string name="width_8">8</string>
    <string name="width_16">16</string>
    <string name="width_32">32</string>
    <string name="width_64">64</string>

    <string name="arg1_hint">Operand 1</string>
    <string name="arg2_hint">Operand 2</string>
    <string name="arg3_hint">Operand 3</string>
    <string name="arg4_hint">Operand 4</string>
    <string name="search_hint">Operand</string>
    <string name="data_hint">Data Value</string>
    <string name="label_hint">Label</string>
    <string name="comment_hint">Comment</string>
    <string name="filename_hint">File name</string>

    <string name="positive_button_text">OK</string>
    <string name="negative_button_text">Cancel</string>

    <string name="new_button_text">New</string>
    <string name="load_button_text">Load</string>
    <string name="save_button_text">Save</string>
    <string name="mapping_button_text">Mapping</string>
    <string name="save_message_positive">File saved</string>
    <string name="save_message_negative">Save failed!</string>
    <string name="nothing_to_save_message">Nothing to save!</string>
    <string name="file_too_long_message">File bigger than memory size. Program may NOT work as expected!</string>
    <string name="invalid_filename_message">Invalid filename</string>
    <string name="file_list_dialog_title">Select file</string>
    <string name="filename_dialog_title">Create file</string>

    <string name="key_label_text">Key</string>
    <string name="value_label_text">Value</string>
    <string name="add_button_text">Add</string>
    <string name="remove_button_text">Remove</string>

    <string name="wizardactivity_prev_button_text">Previous</string>
    <string name="wizardactivity_next_button_text">Next</string>
    <string name="wizardactivity_next_button_finish">Finish</string>

    <string name="inspectactivity_step_button_text">Step</string>
    <string name="inspectactivity_run_button_text">Run</string>
    <string name="inspectactivity_stop_button_text">Stop</string>
    <string name="inspectactivity_reset_button_text">Replay</string>
    <string name="inspectactivity_system_clock_label">Time elapsed: </string>

    <string name="pin_name_command">command</string>
    <string name="pin_name_address">address</string>
    <string name="pin_name_data">data</string>
    <string name="pin_name_pc_val">PC data</string>
    <string name="pin_name_ir_val">IR data</string>
    <string name="pin_name_select">select</string>
    <string name="pin_data_execute">execute</string>
    <string name="pin_data_set_next">Set Next</string>
    <string name="pin_data_get_nop">Get NOP</string>
    <string name="pin_data_halt">halt</string>
    <string name="pin_data_sleep">sleep</string>
    <string name="pin_data_done">done</string>
    <string name="pin_data_read">read</string>
    <string name="pin_data_write">write</string>

    <string name="mapping_dialog_title">Add a mapping</string>
    <string name="data_mapping_button_text">Data Literal</string>
    <string name="data_reg_mapping_button_text">Data Register</string>

    <string name="title_activity_memory_port_multiplexer_tutorial">
        MemoryPortMultiplexerTutorialActivity
    </string>


    <!-- Custom View IDs -->
    <item name="DeviceView_main_view" type="id"/>
    <item name="DeviceView_pin_view" type="id"/>
    <item name="ControlUnitView_pc_label" type="id"/>
    <item name="ControlUnitView_ir_label" type="id"/>
    <item name="ControlUnitView_pc_view" type="id"/>
    <item name="ControlUnitView_ir_view" type="id"/>
    <item name="ControlUnitView_fsm_view" type="id"/>
    <item name="ControlUnitView_state_label" type="id"/>
    <item name="ComputeCoreView_instruction_label" type="id"/>
    <item name="CpuCoreView_pc_view" type="id"/>
    <item name="CpuCoreView_ir_view" type="id"/>
    <item name="CpuCoreView_fsm_view" type="id"/>
    <item name="PinView_background_layout" type="id"/>
    <item name="PinView_pin_name" type="id"/>
    <item name="PinView_signal_text" type="id"/>
    <item name="ManyToOnePortView_input_pins" type="id"/>
    <item name="ManyToOnePortView_output_pins" type="id"/>
    <item name="ManyToOnePortView_mainView" type="id"/>
    <item name="TrapeziumView_middle" type="id"/>
    <item name="TrapeziumView_first_triangle" type="id"/>
    <item name="TrapeziumView_last_triangle" type="id"/>
    <item name="MultiplexerView_input_pins" type="id"/>
    <item name="MultiplexerView_output_pins" type="id"/>
    <item name="MultiplexerView_middle" type="id"/>
    <item name="MultiplexerView_first_triangle" type="id"/>
    <item name="MultiplexerView_last_triangle" type="id"/>
    <item name="WizardActivity_ViewPager" type="id"/>
    <item name="WizardActivity_PreviousButton" type="id"/>
    <item name="MappingDialogFragment_dataMappingButton" type="id"/>
    <item name="MappingDialogFragment_dataRegMappingButton" type="id"/>

    <!-- Custom View Attributes -->
    <integer name="DeviceView_pin_position_left">0</integer>
    <integer name="DeviceView_pin_position_right">1</integer>
    <integer name="DeviceView_pin_position_top">2</integer>
    <integer name="DeviceView_pin_position_bottom">3</integer>
    <integer name="RightAngleTriangleView_diagonal_topLeftToBottomRight">0</integer>
    <integer name="RightAngleTriangleView_diagonal_topRightToBottomLeft">1</integer>
    <integer name="RightAngleTriangleView_fillPosition_left">0</integer>
    <integer name="RightAngleTriangleView_fillPosition_right">1</integer>
    <integer name="RightAngleTriangleView_pinOrientation_none">0</integer>
    <integer name="RightAngleTriangleView_pinOrientation_horizontal">1</integer>
    <integer name="RightAngleTriangleView_pinOrientation_vertical">2</integer>
    <string name="title_activity_von_neu_frag">VonNeuFragActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_inspect">InspectActivity</string>
</resources>
