<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <view
        class="org.ricts.abstractmachine.ui.utils.MultiLineRadioGroup"
        android:id="@+id/instrRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"/>
    <EditText
        android:id="@+id/operandOneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapCharacters"
        android:hint="@string/arg1_hint"/>
    <EditText
        android:id="@+id/operandTwoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapCharacters"
        android:hint="@string/arg2_hint"/>
    <EditText
        android:id="@+id/operandThreeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapCharacters"
        android:hint="@string/arg3_hint"/>
    <EditText
        android:id="@+id/operandFourEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapCharacters"
        android:hint="@string/arg4_hint"/>
    <EditText
        android:id="@+id/labelEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_hint"/>
    <EditText
        android:id="@+id/commentEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment_hint"/>
</LinearLayout>