<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.ricts.abstractmachine.ui.fragments.CpuBasicsFragment">

    <TextView
        android:id = "@+id/archLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/architecture_type_label"
        />
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/archRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/archLabel"
                android:checkedButton = "@+id/vonNeumannButton"
                android:orientation="horizontal">
        <RadioButton android:id="@+id/vonNeumannButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/architecture_type_von_neumann"/>
        <RadioButton android:id="@+id/harvardButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/architecture_type_harvard"/>
    </RadioGroup>
    <TextView
        android:id = "@+id/coreTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/archRadioGroup"
        android:text="@string/compute_core_type_label"
        />
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/coreTypeRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/coreTypeLabel"
                android:checkedButton = "@+id/registerTypeButton"
                android:orientation="horizontal">
        <RadioButton android:id="@+id/registerTypeButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/compute_core_type_register"/>
        <RadioButton android:id="@+id/accumTypeButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/compute_core_type_acc"/>
        <RadioButton android:id="@+id/stackTypeButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/compute_core_type_stack"/>
    </RadioGroup>
    <TextView
        android:id = "@+id/coreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coreTypeRadioGroup"
        android:text="Compute Core:"
        />
    <Spinner
        android:id = "@+id/coreSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coreLabel"
        />

    <TextView
        android:id = "@+id/bitWidthLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coreSpinner"
        android:text="@string/data_width_label"
        />
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/bitWidthRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bitWidthLabel"
                android:checkedButton = "@+id/eightBitButton"
                android:orientation="horizontal">
        <RadioButton android:id="@+id/eightBitButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/data_width_8"/>
        <RadioButton android:id="@+id/sixteenBitButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/data_width_16"/>
    </RadioGroup>
</RelativeLayout>